// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using Sqeez.Api.Data;

#nullable disable

namespace Sqeez.Api.Migrations
{
    [DbContext(typeof(SqeezDbContext))]
    partial class SqeezDbContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "10.0.3")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("QuizOptionQuizQuestionResponse", b =>
                {
                    b.Property<long>("OptionsId")
                        .HasColumnType("bigint");

                    b.Property<long>("ResponsesId")
                        .HasColumnType("bigint");

                    b.HasKey("OptionsId", "ResponsesId");

                    b.HasIndex("ResponsesId");

                    b.ToTable("QuizOptionResponses", (string)null);
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.Enrollment", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<DateTime>("EnrolledAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean");

                    b.Property<int>("Mark")
                        .HasColumnType("integer");

                    b.Property<long>("StudentId")
                        .HasColumnType("bigint");

                    b.Property<long>("SubjectId")
                        .HasColumnType("bigint");

                    b.HasKey("Id");

                    b.HasIndex("StudentId");

                    b.HasIndex("SubjectId");

                    b.ToTable("Enrollments");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.SchoolClass", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("AcademicYear")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Section")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<long?>("TeacherId")
                        .HasColumnType("bigint");

                    b.HasKey("Id");

                    b.HasIndex("TeacherId")
                        .IsUnique();

                    b.ToTable("SchoolClasses");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.Subject", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Code")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Description")
                        .HasColumnType("text");

                    b.Property<DateTime?>("EndDate")
                        .HasColumnType("timestamp with time zone");

                    b.Property<bool>("IsActive")
                        .HasColumnType("boolean");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<long?>("SchoolClassId")
                        .HasColumnType("bigint");

                    b.Property<DateTime>("StartDate")
                        .HasColumnType("timestamp with time zone");

                    b.Property<long?>("TeacherId")
                        .HasColumnType("bigint");

                    b.HasKey("Id");

                    b.HasIndex("SchoolClassId");

                    b.HasIndex("TeacherId");

                    b.ToTable("Subjects");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Gamification.Badge", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Condition")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("IconUrl")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("XpBonus")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.ToTable("Badges");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Gamification.Level", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("XpThreshold")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.ToTable("Levels");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Gamification.StudentBadge", b =>
                {
                    b.Property<long>("StudentId")
                        .HasColumnType("bigint");

                    b.Property<long>("BadgeId")
                        .HasColumnType("bigint");

                    b.Property<DateTime>("EarnedAt")
                        .HasColumnType("timestamp with time zone");

                    b.HasKey("StudentId", "BadgeId");

                    b.HasIndex("BadgeId");

                    b.ToTable("StudentBadges");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Media.MediaAsset", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("Description")
                        .HasColumnType("text");

                    b.Property<bool>("IsPrivate")
                        .HasColumnType("boolean");

                    b.Property<string>("LocationUrl")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("MimeType")
                        .HasColumnType("integer");

                    b.Property<long>("OwnerId")
                        .HasColumnType("bigint");

                    b.HasKey("Id");

                    b.HasIndex("OwnerId");

                    b.ToTable("MediaAssets");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.Quiz", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<DateTime?>("ClosingDate")
                        .HasColumnType("timestamp with time zone");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("Description")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("MaxRetries")
                        .HasColumnType("integer");

                    b.Property<DateTime?>("PublishDate")
                        .HasColumnType("timestamp with time zone");

                    b.Property<long>("SubjectId")
                        .HasColumnType("bigint");

                    b.Property<string>("Title")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("SubjectId");

                    b.ToTable("Quizzes");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizAttempt", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<DateTime?>("EndTime")
                        .HasColumnType("timestamp with time zone");

                    b.Property<long>("EnrollmentId")
                        .HasColumnType("bigint");

                    b.Property<int?>("Mark")
                        .HasColumnType("integer");

                    b.Property<long>("QuizId")
                        .HasColumnType("bigint");

                    b.Property<DateTime?>("StartTime")
                        .HasColumnType("timestamp with time zone");

                    b.Property<int>("Status")
                        .HasColumnType("integer");

                    b.Property<int>("TotalScore")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("EnrollmentId");

                    b.HasIndex("QuizId");

                    b.ToTable("QuizAttempts");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizOption", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<bool>("IsCorrect")
                        .HasColumnType("boolean");

                    b.Property<bool>("IsFreeText")
                        .HasColumnType("boolean");

                    b.Property<long?>("MediaAssetId")
                        .HasColumnType("bigint");

                    b.Property<long>("QuizQuestionId")
                        .HasColumnType("bigint");

                    b.Property<string>("Text")
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("MediaAssetId");

                    b.HasIndex("QuizQuestionId");

                    b.ToTable("QuizOptions");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizQuestion", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<int>("Difficulty")
                        .HasColumnType("integer");

                    b.Property<long?>("MediaAssetId")
                        .HasColumnType("bigint");

                    b.Property<long>("QuizId")
                        .HasColumnType("bigint");

                    b.Property<int>("TimeLimit")
                        .HasColumnType("integer");

                    b.Property<string>("Title")
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("MediaAssetId");

                    b.HasIndex("QuizId");

                    b.ToTable("QuizQuestions");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizQuestionResponse", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<string>("FreeTextAnswer")
                        .HasColumnType("text");

                    b.Property<bool>("IsLiked")
                        .HasColumnType("boolean");

                    b.Property<long>("QuizAttemptId")
                        .HasColumnType("bigint");

                    b.Property<long>("QuizQuestionId")
                        .HasColumnType("bigint");

                    b.Property<long>("ResponseTimeMs")
                        .HasColumnType("bigint");

                    b.Property<int>("Score")
                        .HasColumnType("integer");

                    b.HasKey("Id");

                    b.HasIndex("QuizAttemptId");

                    b.HasIndex("QuizQuestionId");

                    b.ToTable("QuizQuestionResponses");
                });

            modelBuilder.Entity("Sqeez.Api.Models.System.SystemConfig", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("AllowPublicRegistration")
                        .HasColumnType("boolean");

                    b.Property<int>("CurrentAcademicYear")
                        .HasColumnType("integer");

                    b.Property<string>("DefaultLanguage")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("MaxFileUploadSizeMB")
                        .HasColumnType("integer");

                    b.Property<string>("SchoolName")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.ToTable("SystemConfigs");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Users.Student", b =>
                {
                    b.Property<long>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("bigint");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<long>("Id"));

                    b.Property<int>("CurrentXP")
                        .HasColumnType("integer");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<bool>("IsArchived")
                        .HasColumnType("boolean");

                    b.Property<bool>("IsOnline")
                        .HasColumnType("boolean");

                    b.Property<DateTime>("LastSeen")
                        .HasColumnType("timestamp with time zone");

                    b.Property<string>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("text");

                    b.Property<int>("Role")
                        .HasColumnType("integer");

                    b.Property<long?>("SchoolClassId")
                        .HasColumnType("bigint");

                    b.Property<string>("Username")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasKey("Id");

                    b.HasIndex("SchoolClassId");

                    b.ToTable("Users", (string)null);

                    b.HasDiscriminator<int>("Role").HasValue(0);

                    b.UseTphMappingStrategy();
                });

            modelBuilder.Entity("Sqeez.Api.Models.Users.Teacher", b =>
                {
                    b.HasBaseType("Sqeez.Api.Models.Users.Student");

                    b.Property<string>("Department")
                        .HasColumnType("text");

                    b.HasDiscriminator().HasValue(1);
                });

            modelBuilder.Entity("Sqeez.Api.Models.Users.Admin", b =>
                {
                    b.HasBaseType("Sqeez.Api.Models.Users.Teacher");

                    b.Property<string>("PhoneNumber")
                        .IsRequired()
                        .HasColumnType("text");

                    b.HasDiscriminator().HasValue(2);
                });

            modelBuilder.Entity("QuizOptionQuizQuestionResponse", b =>
                {
                    b.HasOne("Sqeez.Api.Models.QuizSystem.QuizOption", null)
                        .WithMany()
                        .HasForeignKey("OptionsId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Sqeez.Api.Models.QuizSystem.QuizQuestionResponse", null)
                        .WithMany()
                        .HasForeignKey("ResponsesId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.Enrollment", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Users.Student", "Student")
                        .WithMany("Enrollments")
                        .HasForeignKey("StudentId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Sqeez.Api.Models.Academics.Subject", "Subject")
                        .WithMany("Enrollments")
                        .HasForeignKey("SubjectId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.Navigation("Student");

                    b.Navigation("Subject");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.SchoolClass", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Users.Teacher", "Teacher")
                        .WithOne("ManagedClass")
                        .HasForeignKey("Sqeez.Api.Models.Academics.SchoolClass", "TeacherId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("Teacher");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.Subject", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Academics.SchoolClass", "SchoolClass")
                        .WithMany("Subjects")
                        .HasForeignKey("SchoolClassId");

                    b.HasOne("Sqeez.Api.Models.Users.Teacher", "Teacher")
                        .WithMany("Subjects")
                        .HasForeignKey("TeacherId");

                    b.Navigation("SchoolClass");

                    b.Navigation("Teacher");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Gamification.StudentBadge", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Gamification.Badge", "Badge")
                        .WithMany("StudentBadges")
                        .HasForeignKey("BadgeId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Sqeez.Api.Models.Users.Student", "Student")
                        .WithMany("StudentBadges")
                        .HasForeignKey("StudentId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Badge");

                    b.Navigation("Student");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Media.MediaAsset", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Users.Teacher", "Owner")
                        .WithMany("MediaAssets")
                        .HasForeignKey("OwnerId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Owner");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.Quiz", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Academics.Subject", "Subject")
                        .WithMany("Quizzes")
                        .HasForeignKey("SubjectId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Subject");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizAttempt", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Academics.Enrollment", "Enrollment")
                        .WithMany("QuizAttempts")
                        .HasForeignKey("EnrollmentId")
                        .OnDelete(DeleteBehavior.Restrict)
                        .IsRequired();

                    b.HasOne("Sqeez.Api.Models.QuizSystem.Quiz", "Quiz")
                        .WithMany("QuizAttempts")
                        .HasForeignKey("QuizId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Enrollment");

                    b.Navigation("Quiz");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizOption", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Media.MediaAsset", "Media")
                        .WithMany()
                        .HasForeignKey("MediaAssetId");

                    b.HasOne("Sqeez.Api.Models.QuizSystem.QuizQuestion", "QuizQuestion")
                        .WithMany("Options")
                        .HasForeignKey("QuizQuestionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Media");

                    b.Navigation("QuizQuestion");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizQuestion", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Media.MediaAsset", "Media")
                        .WithMany()
                        .HasForeignKey("MediaAssetId");

                    b.HasOne("Sqeez.Api.Models.QuizSystem.Quiz", "Quiz")
                        .WithMany("QuizQuestions")
                        .HasForeignKey("QuizId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Media");

                    b.Navigation("Quiz");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizQuestionResponse", b =>
                {
                    b.HasOne("Sqeez.Api.Models.QuizSystem.QuizAttempt", "QuizAttempt")
                        .WithMany("Responses")
                        .HasForeignKey("QuizAttemptId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.HasOne("Sqeez.Api.Models.QuizSystem.QuizQuestion", "QuizQuestion")
                        .WithMany()
                        .HasForeignKey("QuizQuestionId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("QuizAttempt");

                    b.Navigation("QuizQuestion");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Users.Student", b =>
                {
                    b.HasOne("Sqeez.Api.Models.Academics.SchoolClass", "SchoolClass")
                        .WithMany("Students")
                        .HasForeignKey("SchoolClassId")
                        .OnDelete(DeleteBehavior.SetNull);

                    b.Navigation("SchoolClass");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.Enrollment", b =>
                {
                    b.Navigation("QuizAttempts");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.SchoolClass", b =>
                {
                    b.Navigation("Students");

                    b.Navigation("Subjects");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Academics.Subject", b =>
                {
                    b.Navigation("Enrollments");

                    b.Navigation("Quizzes");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Gamification.Badge", b =>
                {
                    b.Navigation("StudentBadges");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.Quiz", b =>
                {
                    b.Navigation("QuizAttempts");

                    b.Navigation("QuizQuestions");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizAttempt", b =>
                {
                    b.Navigation("Responses");
                });

            modelBuilder.Entity("Sqeez.Api.Models.QuizSystem.QuizQuestion", b =>
                {
                    b.Navigation("Options");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Users.Student", b =>
                {
                    b.Navigation("Enrollments");

                    b.Navigation("StudentBadges");
                });

            modelBuilder.Entity("Sqeez.Api.Models.Users.Teacher", b =>
                {
                    b.Navigation("ManagedClass");

                    b.Navigation("MediaAssets");

                    b.Navigation("Subjects");
                });
#pragma warning restore 612, 618
        }
    }
}
